Workshop04/wp-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: wp-ing
  labels:
    name: wp-ing
spec: 
  ingressClassName: nginx
  rules:
    - host: wp-104.248.97.96.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service: 
                name: wp-app-svc
                port:
                  number: 80
